methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:6: error: ')' expected but ';' found.
  def ligne(c:Color,v:Color) {diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();)}
                                                                                   ^PatternPicture:6: error: ')' expected but ';' found.
  def ligne(c:Color,v:Color) {diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();)}
                                                                                                                                                           ^PatternPicture:6: error: illegal start of statement
  def ligne(c:Color,v:Color) {diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();)}
                                                                                                                                                                              ^