methods.picture.PatternPicture.scala.code
override def run() {
  def marquer() {baisseBrosse();leveBrosse();}
  def diagD(c:Color) {setCouleurBrosse(c);marquer();avance();droite();avance();gauche();marquer();}
  def diagG(c:Color) {setCouleurBrosse(c);marquer();droite();avance();droite();avance();gauche();gauche();marquer()}
gauche();avance();
  def ligne(c:Color,v:Color) {diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();diagG(c);droite();avance();gauche();diagD(v);droite(à;avance();gauche();)}
  def changeLigne() {avance();avance;();droite();avance();avance();gauche();}

 ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne();recule();droite();avance();
                                                                                  }